{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "a97fe62b-bcd3-4d29-9ea7-bd1a3c82a14a",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "fc4ac030-6e9c-42fb-8d19-f11c8ae88005",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4b4601cc-1325-417c-b110-1d6c146e3194",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HorizontalMovement",
                    "type": "Value",
                    "id": "dd8ac193-3dc4-4145-8e71-86ec7867620d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VerticalMovement",
                    "type": "Button",
                    "id": "f7fbc2de-8d79-4b77-a5fa-da0c6e32d21c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "6859f0f2-7e78-46e3-b41f-cdb1a7668582",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.401298E-45)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7dd8315c-be33-47b2-a13d-a6da36016650",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c7c51f0-1f69-49fe-bdc9-217e4ded11a7",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "5e763f79-e3cc-477e-b529-1782aa3bdd39",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "a2614fbf-cd20-44ad-8010-979fe469edd3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "6888d7b7-4b91-4955-896f-58aa5c29ddb8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "ef30b6f3-f4ca-4a0b-84aa-c399d77d79fc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "99def28f-8c48-48ed-a457-6f36884ef48f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "VerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "2557f2e2-8cba-4733-a77a-cf08b6f7881d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "VerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "851af1c6-ef7b-445e-9468-5f581bee8442",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse+Keyboard",
            "bindingGroup": "Mouse+Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}